# finally-final

./: CMakeLists.txt  Dockerfile  README.md  run.sh  runfile.text  s3_client  s3_upload_download.c
libs/: libaws-c-auth.so.1.0.0  libaws-c-cal.so.1.0.0  libaws-c-common.so.1.0.0  libaws-c-compression.so.1.0.0  libaws-c-http.so.1.0.0  libaws-c-io.so.1.0.0  libaws-c-s3.so.1.0.0  libaws-c-sdkutils.so.1.0.0  libaws-checksums.so.1.0.0  libs2n.so.1.0.0
libs/cmake/aws-c-auth/shared/: aws-c-auth-targets.cmake
libs/cmake/aws-c-cal/shared/: aws-c-cal-targets.cmake
libs/cmake/aws-c-compression/shared/: aws-c-compression-targets.cmake
libs/cmake/aws-c-http/shared/: aws-c-http-targets.cmake
libs/cmake/aws-c-io/shared/: aws-c-io-targets.cmake
libs/cmake/aws-c-s3/shared/: aws-c-s3-targets.cmake
libs/cmake/aws-c-sdkutils/shared/: aws-c-sdkutils-targets.cmake
libs/cmake/aws-checksums/shared/: aws-checksums-targets.cmake
libs/s2n/cmake/shared/: s2n-targets.cmake
